force-app/main/default/objects/JBCXM__SurveyMaster__c/JBCXM__SurveyMaster__c.object-meta.xml
<CustomObject>
    <description>Survey Master object lists the surveys that have been published and feedback is collected.</description>
    <label>NPS Survey Master</label>
    <nameField>
        <label>Survey Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Survey Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>