force-app/main/default/objects/JBCXM__SurveyMaster__c/fields/JBCXM__AccountLevelAggregation__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AccountLevelAggregation__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <description>To store the account level aggregation data of Promoters, Passives, Detractors by user role.</description>
    <label>Account Level Aggregation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>