force-app/main/default/objects/JBCXM__SurveyMaster__c/fields/JBCXM__Default__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this is the default record again which all the survey responses will be saved.</description>
    <inlineHelpText>Check if this is the default record again which all the survey responses will be saved.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>