force-app/main/default/objects/JBCXM__SurveyMaster__c/fields/JBCXM__EndDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EndDate__c</fullName>
    <description>The date when the survey ends</description>
    <inlineHelpText>End date of the survey.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>