force-app/main/default/objects/JBCXM__SurveyMaster__c/fields/JBCXM__PublishDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PublishDate__c</fullName>
    <description>It represents when the survey was published.</description>
    <inlineHelpText>Published date of the Survey.</inlineHelpText>
    <label>Publish Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>