force-app/main/default/objects/JBCXM__SurveyMaster__c/fields/JBCXM__StartDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__StartDate__c</fullName>
    <description>The date during which the survey started</description>
    <inlineHelpText>Start date of the survey.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>