force-app/main/default/objects/JBCXM__SurveyMaster__c/fields/JBCXM__SurveyId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SurveyId</label>
    <referenceTo>JBCXM__Survey__c</referenceTo>
    <relationshipName>NPSSurvey_Master</relationshipName>
    <type>Lookup</type>
</CustomField>