force-app/main/default/objects/JBCXM__SurveyMaster__c/fields/JBCXM__SurveyName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyName__c</fullName>
    <description>Name of the Survey.</description>
    <inlineHelpText>Name of the Survey.</inlineHelpText>
    <label>Survey Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>