force-app/main/default/objects/JBCXM__SurveyMaster__c/fields/JBCXM__UserDistributionCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UserDistributionCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This represents number of Users to sent the Survey.</description>
    <inlineHelpText>This represents number of Users to sent the Survey.</inlineHelpText>
    <label>User Distribution Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>