force-app/main/default/objects/JBCXM__SurveyMaster__c/validationRules/JBCXM__EndDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>JBCXM__EndDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>JBCXM__EndDate__c  &lt;  JBCXM__StartDate__c</errorConditionFormula>
    <errorMessage>Start Date cannot be greater than End date.</errorMessage>
</ValidationRule>