force-app/main/default/objects/JBCXM__SurveyMaster__c/validationRules/JBCXM__StartDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>JBCXM__StartDateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>JBCXM__PublishDate__c  &gt; JBCXM__StartDate__c</errorConditionFormula>
    <errorMessage>Start Date cannot be less than Publish Date</errorMessage>
</ValidationRule>